--- a/MyVendor.MyProject/composer.json
+++ b/MyVendor.MyProject/composer.json
@@ -66,7 +66,8 @@
             "@compile",
             "@metrics"
         ],
-        "serve": "COMPOSER_PROCESS_TIMEOUT=0 php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "debug": "COMPOSER_PROCESS_TIMEOUT=0 php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "serve": "COMPOSER_PROCESS_TIMEOUT=0 php -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
         "page": "php bin/page.php"
     },
