--- a/MyVendor.MyProject/composer.json
+++ b/MyVendor.MyProject/composer.json
@@ -10,7 +10,8 @@
         "bear/resource": "^1.17",
         "bear/sunday": "^1.6",
         "ray/aop": "^2.12",
-        "ray/di": "^2.14"
+        "ray/di": "^2.14",
+        "ray/media-query": "^0.13.0"
     },
     "require-dev": {
         "bear/api-doc": "^1.1",
