--- a/MyVendor.MyProject/composer.json
+++ b/MyVendor.MyProject/composer.json
@@ -5,13 +5,13 @@
     "description": "",
     "require": {
         "php": "^8.1.0",
-        "aura/session": "^4.0",
         "bear/dotenv": "^1.0",
         "bear/package": "^1.14",
         "bear/resource": "^1.17",
         "bear/sunday": "^1.6",
         "qiq/qiq": "^3.0",
         "ray/aop": "^2.12",
+        "ray/aura-session-module": "^1.2",
         "ray/di": "^2.14"
     },
     "require-dev": {
