--- a/MyVendor.MyProject/composer.json
+++ b/MyVendor.MyProject/composer.json
@@ -37,7 +37,7 @@
             "@composer bin all install --ansi"
         ],
         "setup": "php bin/setup.php",
-        "compile": "./vendor/bin/bear.compile 'MyVendor\\MyProject' prod-app ./",
+        "compile": "./vendor/bin/bear.compile 'MyVendor\\MyProject' prod-html-app ./",
         "doc": "./vendor/bin/apidoc",
         "test": "./vendor/bin/phpunit",
         "coverage": "php -dzend_extension=xdebug.so -dxdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage",
@@ -68,7 +68,8 @@
             "@compile",
             "@metrics"
         ],
-        "serve": "COMPOSER_PROCESS_TIMEOUT=0 php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "dev": "COMPOSER_PROCESS_TIMEOUT=0 php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "serve": "COMPOSER_PROCESS_TIMEOUT=0 php -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
         "page": "php bin/page.php"
     },
