--- a/MyVendor.MyProject/composer.json
+++ b/MyVendor.MyProject/composer.json
@@ -37,7 +37,12 @@
             "@composer bin all install --ansi"
         ],
         "setup": "php bin/setup.php",
-        "compile": "./vendor/bin/bear.compile 'MyVendor\\MyProject' prod-html-app ./",
+        "compile": [
+            "mv ./autoload.php ./autoload.php.org",
+            "./vendor/bin/bear.compile 'MyVendor\\MyProject' prod-html-app ./",
+            "rm -rf ./autoload.php ./preload.php",
+            "mv ./autoload.php.org ./autoload.php"
+        ],
         "doc": "./vendor/bin/apidoc",
         "test": "./vendor/bin/phpunit",
         "coverage": "php -dzend_extension=xdebug.so -dxdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage",
